<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_marginTop="15dp"
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_description"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="25sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@id/img_item_photo"
            tools:text="@string/motorcycle_name" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_name"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_name"
            tools:text="@string/info" />

        <TextView
            android:id="@+id/tv_item_harga"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="@id/tv_info"
            card_view:layout_constraintStart_toStartOf="@id/tv_info"
            card_view:layout_constraintTop_toBottomOf="@id/tv_info"
            card_view:layout_constraintBottom_toBottomOf="@id/img_item_photo"
            tools:text="@string/harga"
            card_view:layout_constraintVertical_bias="0.0"/>

<!--        <TextView-->
<!--            android:id="@+id/tv_item_description"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_marginTop="6dp"-->
<!--            android:ellipsize="end"-->
<!--            android:maxLines="5"-->
<!--            android:textSize="12sp"-->
<!--            android:textStyle="bold"-->
<!--            card_view:layout_constraintEnd_toEndOf="@id/tv_info"-->
<!--            card_view:layout_constraintStart_toStartOf="@id/tv_info"-->
<!--            card_view:layout_constraintTop_toBottomOf="@id/tv_item_harga"-->
<!--            card_view:layout_constraintBottom_toBottomOf="@id/img_item_photo"-->
<!--            tools:text="@string/description"-->
<!--            card_view:layout_constraintVertical_bias="0.0"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>